--- a/Documantation/Wireframes/html/login.html
+++ b/Documantation/Wireframes/html/login.html
@@ -48,13 +48,13 @@
 <div class="login-container">
     <h1>Cricket Score Keeper</h1>
     <hr>
-    <h2>SignUp</h2>
+    <h2>Login</h2>
     <form action="#" method="post">
         <input type="text" name="email" placeholder="Email">
         <br>
         <input type="password" name="password" placeholder="Password">
         <br>
-        <input type="submit" value="SignUp">
+        <input type="submit" value="Login">
     </form>
 </div>
 </body>
