Updated and added new functions and files
Today Updated and added new functions and files

--- a/Documantation/Wireframes/html/View Match.html
+++ b/Documantation/Wireframes/html/View Match.html
@@ -55,7 +55,7 @@
     <td>Team B</td>
     <td>2024-02-23 15:00</td>
     <td>Team A won by 3 wickets</td>
-    <td>In Progress</td>
+    <td>Ended</td>
   </tr>
   <tr>
     <td>Team C</td>
